--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:denky32]
+[env:esp32dev]
 platform = espressif32
-board = denky32
+board = esp32dev
 framework = arduino
-lib_deps = fastled/FastLED@^3.8.0
+lib_deps = 
+    fastled/FastLED@^3.8.0
+    bblanchon/ArduinoJson@^7.2.0
+	paulstoffregen/Time@^1.6.1
+	fmgrafikdesign/Simple Web Serial@^1.0.0
