redo for loop when using ArduinoJson library; fix conditionals of const char using strcmp() method in updateLEDs

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-    fastled/FastLED@^3.8.0
-    bblanchon/ArduinoJson@^7.2.0
+	fastled/FastLED@^3.8.0
+	bblanchon/ArduinoJson@^7.2.0
 	paulstoffregen/Time@^1.6.1
 	fmgrafikdesign/Simple Web Serial@^1.0.0
+	arduino-libraries/Arduino_JSON@^0.2.0
