--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	paulstoffregen/Time@^1.6.1
 	fmgrafikdesign/Simple Web Serial@^1.0.0
 	arduino-libraries/Arduino_JSON@^0.2.0
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
