--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,5 @@ lib_deps =
 	paulstoffregen/Time@^1.6.1
 	fmgrafikdesign/Simple Web Serial@^1.0.0
 	arduino-libraries/Arduino_JSON@^0.2.0
-	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit SSD1306@^2.5.12
