--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "string_view": "cpp"
     }
 }
