--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,34 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	fastled/FastLED@^3.8.0
 	bblanchon/ArduinoJson@^7.2.0
 	paulstoffregen/Time@^1.6.1
 	fmgrafikdesign/Simple Web Serial@^1.0.0
-	arduino-libraries/Arduino_JSON@^0.2.0
-	adafruit/Adafruit GFX Library@^1.11.11
-	adafruit/Adafruit SSD1306@^2.5.12
+	; arduino-libraries/Arduino_JSON@^0.2.0
+	bodmer/TFT_eSPI@^2.5.43
+build_flags = 
+    -D USER_SETUP_LOADED=1
+    -D ST7789_2_DRIVER=1
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_MISO=19
+    -D TFT_MOSI=23
+    -D TFT_SCLK=18
+    -D TFT_CS=15
+    -D TFT_DC=2
+    -D TFT_RST=4
+    -D TOUCH_CS=-1
+    -D TFT_BL=21
+    -D TFT_BACKLIGHT_ON=HIGH
+    -D TFT_RGB_ORDER=TFT_RGB
+    -D LOAD_GLCD=1
+    -D LOAD_FONT2=1
+    -D LOAD_FONT4=1
+    -D LOAD_FONT6=1
+    -D LOAD_FONT7=1
+    -D LOAD_FONT8=1
+    -D LOAD_FONT8N=1
+    -D LOAD_GFXFF=1
+    -D SMOOTH_FONT=1
+    -D SPI_FREQUENCY=40000000
+    -D SPI_READ_FREQUENCY=20000000
